--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  json_serializable: ^6.7.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
+  freezed: ^2.4.7
+  build_runner: ^2.4.8
 
 flutter:
   uses-material-design: true
