The app has been renamed to Wikiberria

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: wikiberry
+name: wikiberria
 description: "A catalog of berries"
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
