--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = wikiberria
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.wikiberria
+PRODUCT_BUNDLE_IDENTIFIER = com.tatipoga.wikiberria
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 com.tatipoga. All rights reserved.
